Chapter_11/console.log
Welcome to Scala version 2.8.1.final (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_24).
Type in expressions to have them evaluated.
Type :help for more information.

scala> new Int
<console>:6: error: class Int is abstract; cannot be instantiated
       new Int
       ^

scala> 42.toString
res1: java.lang.String = 42

scala> 42.hashCode
res2: Int = 42

scala> 42 equals 42
res3: Boolean = true

scala> 42 max 43
res4: Int = 43

scala> 42 min 43
res5: Int = 42

scala> 1 until 5
res6: scala.collection.immutable.Range with scala.collection.immutable.Range.ByOne = Range(1, 2, 3, 4)

scala> 1 to 5
res7: scala.collection.immutable.Range.Inclusive with scala.collection.immutable.Range.ByOne = Range(1, 2, 3, 4, 5)

scala> 3.abs
res8: Int = 3

scala> (-3).abs
res9: Int = 3

scala> def isEqual(x: Int, y: Int) = x == y
isEqual: (x: Int,y: Int)Boolean

scala> isEqual(421, 421)
res10: Boolean = true

scala> def isEqual(x: Any, y: Any) = x == y
isEqual: (x: Any,y: Any)Boolean

scala> isEqual(421, 421)
res11: Boolean = true

scala> val x = "abcd".substring(2)
x: java.lang.String = cd

scala> val y = "abcd".substring(2)
y: java.lang.String = cd

scala> x == y
res12: Boolean = true

scala> val x = new String("abc")
x: java.lang.String = abc

scala> val y = new String("abc")
y: java.lang.String = abc

scala> x == y
res13: Boolean = true

scala> x eq y
res14: Boolean = false

scala> x ne y
res15: Boolean = true

scala> val i: Int = null
<console>:5: error: type mismatch;
 found   : Null(null)
 required: Int
       val i: Int = null
                    ^

scala> def error(message: String): Nothing =
     |

classOf                           isEqual                           res1                              res10
res11                             res12                             res13                             res14
res15                             res2                              res3                              res4
res5                              res6                              res7                              res8
res9                              settings                          x                                 y
asInstanceOf                      ch                                com                               css
images                            isInstanceOf                      java                              javax
junit                             org                               scala                             sun
sunw                              toString                          ::                                AbstractMethodError
AnyRef                            ArrayIndexOutOfBoundsException    BigDecimal                        BigInt
BufferedIterator                  Character                         ClassCastException                Collection
Equiv                             Error                             Exception                         Fractional
IllegalArgumentException          IndexOutOfBoundsException         IndexedSeq                        Integer
Integral                          Iterable                          Iterator                          List
NoSuchElementException            NullPointerException              NumberFormatException             Numeric
Ordered                           Ordering                          PartialOrdering                   PartiallyOrdered
RandomAccessSeq                   Range                             RuntimeException                  Seq
Sequence                          Stream                            StringBuilder                     StringIndexOutOfBoundsException
Throwable                         Traversable                       TraversableOnce                   UnsupportedOperationException
Vector                            actors                            annotation                        collection
compat                            concurrent                        io                                math
mobile                            ref                               reflect                           runtime
testing                           text                              tools                             util
xml                               instrument                        management
     |   throw new RuntimeException(message)
error: (message: String)Nothing

scala> def divide(x: Int, y: Int): Int =
     |   if (y != 0) x / y
<console>:8: error: type mismatch;
 found   : Unit
 required: Int
         if (y != 0) x / y
         ^

scala> def divide(x: Int, y: Int): Int =
     |   if (y != 0) x / y else
     |   error("can't divide by zero")
divide: (x: Int,y: Int)Int

scala>